Added completed query parameter
+ "Completed" query param to GET /tasks
/ Changed route to include validateTaskQuery for get
+ parameterization to controller layer
+ parameterization to service layer
+ parameter logic to repo layer
+ new parameter added to openapi.yaml
