# src/controllers/taskController.js
@@ -1,7 +1,13 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
+  const {completed} = req.query
+
+  const option = {
+    completed,
+  };
+  
+  const tasks = await taskService.getAllTasks(option);
   res.json(tasks);
 }
 
